# edix

./: .gitignore  Cargo.toml  README.md  mismatches.csv  myconfig.toml  sample_comparison.xlsx  terminal-demo-full.html  terminal-demo.html  test_filtered  test_fuzzy  test_multikey  test_output  test_output.md  test_output.xlsx
src/: lib.rs  main.rs
src/app/: application.rs
src/services/: config.rs  diff.rs  excel_diff.rs  formatter.rs  fuzzy.rs  io.rs  mod.rs  types.rs
